[gd_scene load_steps=12 format=3 uid="uid://ox8ij1qdjkkh"]

[ext_resource type="Script" path="res://scripts/CartaEnMano.gd" id="1_qjok4"]
[ext_resource type="Texture2D" uid="uid://cn3c3uw325306" path="res://texturas/Dorso_Rojo.png" id="2_vg7fl"]
[ext_resource type="LabelSettings" uid="uid://begwl5binonky" path="res://Fuentes/titulo_cartas.tres" id="3_fhwxm"]
[ext_resource type="LabelSettings" uid="uid://dt1tfgdc64y" path="res://Fuentes/texto_cartas.tres" id="4_wfu54"]

[sub_resource type="Animation" id="Animation_dea5w"]
length = 0.001

[sub_resource type="Animation" id="Animation_nxaop"]
resource_name = "ocultar_carta"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Carta:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(4, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 200)]
}

[sub_resource type="Animation" id="Animation_y4fmm"]
resource_name = "ocultar_carta_jugada"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Carta:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(4, 1),
"update": 0,
"values": [Vector2(0, -200), Vector2(0, 200)]
}

[sub_resource type="Animation" id="Animation_oyi3q"]
resource_name = "seleccionar_carta"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Carta:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(2.82843, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -200)]
}

[sub_resource type="Animation" id="Animation_tcygl"]
resource_name = "subir_carta"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Carta:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -86)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"visibilidad_descripcion"
}]
}

[sub_resource type="Animation" id="Animation_j8v1y"]
resource_name = "subir_carta_mas"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Carta:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(0, -86), Vector2(0, -200)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dhyg4"]
_data = {
"RESET": SubResource("Animation_dea5w"),
"ocultar_carta": SubResource("Animation_nxaop"),
"ocultar_carta_jugada": SubResource("Animation_y4fmm"),
"seleccionar_carta": SubResource("Animation_oyi3q"),
"subir_carta": SubResource("Animation_tcygl"),
"subir_carta_mas": SubResource("Animation_j8v1y")
}

[node name="CartaEnMano" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qjok4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dhyg4")
}

[node name="Carta" type="Sprite2D" parent="."]

[node name="TexturaCarta" type="Sprite2D" parent="Carta"]
scale = Vector2(0.162162, 0.162162)
texture = ExtResource("2_vg7fl")

[node name="BotonCarta" type="TextureButton" parent="Carta"]
offset_left = -54.0
offset_top = -75.0
offset_right = 54.0
offset_bottom = 204.0

[node name="descripcion" type="Control" parent="Carta"]
layout_mode = 3
anchors_preset = 0
offset_top = -75.0
offset_bottom = -75.0

[node name="titulo" type="Label" parent="Carta/descripcion"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.0
offset_top = -205.0
offset_right = 113.0
offset_bottom = -163.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
label_settings = ExtResource("3_fhwxm")
horizontal_alignment = 1

[node name="descripcion" type="Label" parent="Carta/descripcion"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -172.0
offset_right = 122.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
label_settings = ExtResource("4_wfu54")
horizontal_alignment = 1
autowrap_mode = 2
clip_text = true

[connection signal="mouse_entered" from="Carta/BotonCarta" to="." method="_on_boton_carta_mouse_entered"]
[connection signal="mouse_exited" from="Carta/BotonCarta" to="." method="_on_boton_carta_mouse_exited"]
[connection signal="pressed" from="Carta/BotonCarta" to="." method="_on_boton_carta_pressed"]
